# moatless-tree-search

./: README.md  itegration_test_anthropic_claude-3-5-sonnet-20241022-v2:0.json  itegration_test_claude-3-5-haiku-20241022-v1:0.json  itegration_test_claude-3-5-haiku-20241022.json  itegration_test_claude-3-5-haiku-20241212.json  itegration_test_claude-3-5-haiku-latest.json  itegration_test_claude-3-5-sonnet-20241022.json  itegration_test_claude-3-5-sonnet-latest.json  itegration_test_claude-3-haiku-20240307.json  itegration_test_claude-3-haiku.json  pyproject.toml  run.sh
datasets/: small_dataset.json
moatless/: agentic_loop.py  chat.py  debate.py  discriminator.py  expander.py  feedback.py  file_context.py  message_history.py  node.py  schema.py  search_tree.py  templates.py  test_value_function.py  value_function.py  workspace.py
moatless/actions/: action.py  append_string.py  apply_change_and_test.py  code_action_value_mixin.py  (+22 more)
moatless_tools/: api.py  app.py  evaluation_worker.py  schema.py  utils.py
scripts/: evaluation_config.py  generate_report.py  run_evaluation.py  run_evaluation_simple.py  verify_tree_search_feedback.py
swesearch/: debate.py  discriminator.py  evaluation_setups.py
tests/: integration_test.py  itegration_test_anthropic_claude-3-5-sonnet-20241022-v2:0.json  itegration_test_claude-3-5-sonnet-20241022.json  itegration_test_gpt-4o-mini-2024-07-18.json  itegration_test_gpt-4o-mini.json  test_completion.py  test_evaluation_worker_integration.py  test_feedback_agent.py  test_message_history.py  test_selector.py  test_value_function.py
(+87 files in other folders)
