[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "moatless-tree-search"
version = "0.0.4"
description = ""
authors = [ "Albert Örwall <albert@moatless.ai>", "Antonis Antoniades <antonis@ucsb.edu>"]
readme = "README.md"
packages = [
    { include = "moatless" },
]

[tool.poetry.scripts]
moatless-streamlit = "moatless.streamlit.cli:main_run"
moatless-evaluate = "moatless.benchmark.run_evaluation:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

moatless = "^0.0.5"

# Streamlit visualizations
scikit-learn = "^1.6.1"
numpy = "^1.0"
datasets = "^3.2.0"
streamlit = "^1.41.1"
plotly = "^5.24.1"
pygraphviz = "^1.14"

[tool.ruff]
target-version = "py311"
extend-exclude = [ "tests", "evaluations", "notebooks",]

[tool.ruff.lint]
select = [ "B", "DTZ", "E", "F", "I", "LOG", "N", "PLE", "SIM", "T20", "UP",]
ignore = [ "E501", "F401", "UP007" ]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
python-dotenv = "^1.0.1"
mypy = "^1.10.0"
ruff = "^0.5.5"
coverage = "^7.6.1"
